added another get, and auth (still to work on it)
