# routes/movies.js
@@ -9,11 +9,14 @@ router.get('/', moviesController.getAll);
 //find with the id
 router.get('/:id', moviesController.getSingle);
 
+//find with genre
+router.get('/:genre', moviesController.getSome);
+
 //create a new movie with POST
 router.post('/', moviesController.createMovie);
 
 //Edit 
-router.put('/', moviesController.updateMovie);
+router.put('/:id', moviesController.updateMovie);
 
 //delete a contact
 router.delete('/:id', moviesController.deleteMovie);
